finalizar validacao metodo statusCpf

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input id="cpf" type="number" placeholder="Cpf:"><br><br>
         
         <div>
-            <p>O cpf <span style="color:red" id="nCpf">0</span> está <span style="color:red" id="status">valido/invalido</span></p>
+            <p><span id="nomeUser"> User </span>  cpf <span  id="nCpf">0</span> está <span id="status">valido/invalido</span></p>
         </div>
     </form>
 
