--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <form>
         <input id="nome" type="text" placeholder="Nome:"><br><br>
         <input id="cpf" type="number" placeholder="Cpf:"><br><br>
-        
         <div>
-            <p><span id="nomeUser"> User </span>  cpf <span  id="nCpf">0</span> está <span id="status">valido/invalido</span></p>
+            <h1><span id="nomeUser"> User </span></h1>
+            <p>O cpf <span  id="nCpf">0</span> está <span id="status">valido/invalido</span></p>
         </div>
     </form>
 
